<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedIds"
    android:id="@+id/carousel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rowRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="?attr/secondary_ui_01" />

    <au.com.shiftyjelly.pocketcasts.views.component.PagerIndicator
        android:id="@+id/pageIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_gravity="bottom|center_horizontal" />

</FrameLayout>