...
    <string name="mark_as_played">Mark as played</string>
    <string name="mark_as_unplayed">Mark as unplayed</string>
    <string name="mark_played">Mark played</string>
    <string name="mark_unplayed">Mark unplayed</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="more_options">More options</string>
    <string name="next_episode">Next episode</string>
    <string name="notifications_blocked_warning">Notifications are blocked. You can update permission through Settings.</string>
    <string name="notifications_blocked_warning_snackbar_action" translatable="false">@string/update</string>
    <string name="ok">OK</string>
    <string name="options">Options</string>
    <string name="pause">Pause</string>
...
    <string name="podcast_released_monthly">Released monthly</string>
    <string name="podcast_released_weekly">Released weekly</string>
    <string name="podcast_remove_downloaded_file">Remove downloaded file?</string>
    <string name="podcast_search_episodes">Search episodes</string>
    <string name="podcast_selected_episode_plural">%d selected episodes</string>
    <string name="podcast_selected_episode_singular">1 selected episode</string>
    <string name="podcast_settings">Podcast settings</string>
    <string name="podcast_settings_add_to_up_next" translatable="false">@string/add_to_up_next</string>
    <string name="podcast_settings_add_to_up_next_summary">Queue new episodes automatically</string>
    <string name="podcast_settings_auto_archive" translatable="false">@string/auto_archive</string>
    <string name="podcast_settings_auto_archive_custom">Custom for this podcast</string>
    <string name="podcast_settings_auto_archive_custom_summary">Need more fine grained control? Enable auto archive settings for this podcast</string>
    <string name="podcast_settings_auto_download" translatable="false">@string/auto_download</string>
...
